--- a/src/Question.css
+++ b/src/Question.css
@@ -5,10 +5,45 @@
   height: 100vh;
   flex-direction: column;
   justify-content: space-around;
-  background: url("./assets/background3.png");
   background-repeat: no-repeat;
   background-size: cover;
-  
+}
+.back{
+  position: absolute;
+  top: 1%;
+  left: 1%;
+  transform: translate(-1%,-1%);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 5px solid #3498db;
+}
+.back-arrow{
+  height: 5px;
+  width: 30px;
+  position: absolute;
+  top: 50%;
+  left:60%;
+  transform: translate(-60%,-50%);
+  background-color: #3498db ;
+}
+.back-arrow::after{
+  content: "";
+  height: 5px;
+  width: 20px;
+  position: absolute;
+  top: -120%;
+  rotate: -30deg;
+  background-color: #3498db;
+}
+.back-arrow::before{
+  content: "";
+  height: 5px;
+  width: 20px;
+  position: absolute;
+  top: 120%;
+  rotate: 30deg;
+  background-color: #3498db;
 }
 .loading {
   margin: auto;
@@ -51,3 +86,4 @@
 .result--score {
   font-size: 2rem;
 }
+
