--- a/src/Single.css
+++ b/src/Single.css
@@ -8,20 +8,21 @@
 
 .quiz--question{
     color: #293264;
-    font-size: 2rem;
+    font-size: 1.5rem;
     text-shadow: 1px 1px 2px #ffffff, 0 0 1em rgb(249, 249, 249), 0 0 0.2em rgb(250, 250, 255);
 }
 .quiz--choices{
     display: flex;
     gap: 20px;
+    justify-content: space-around;
 }
 .quiz--choice{
     font-family: 'karla';
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     min-width: 100px;
     color: #293264;
     border-radius: 10px;
-    background-color: white;
+    background-color: #ffffff;
     padding: 10px 20px;
     outline: none;
     border: none;
